--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -43,6 +43,15 @@ jobs:
           . .venv/bin/activate
           uv run main.py
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20.x"
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm ci
+
       - name: Deploy to Orbiter
         uses: orbiterhost/orbiter-github-actions@v0.1.4
         with:
