--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "duckduckgo-search>=7.5.0",
     "python-dotenv>=1.0.0",
     "litellm>=1.61.16",
+    "ruff>=0.9.7",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
