--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,9 @@ dependencies = [
     "smolagents>=0.1.0",
     "duckduckgo-search>=7.5.0",
     "python-dotenv>=1.0.0",
-    "litellm>=1.61.16",
-    "ruff>=0.9.7",
+    "litellm>=1.61.20",
+    "ruff>=0.9.9",
+    "pydantic>=2.10.6",
 ]
 requires-python = ">=3.12"
 readme = "README.md"
@@ -26,7 +27,7 @@ managed = true
 dev-dependencies = []
 
 [tool.ruff]
-line-length = 88
+line-length = 200
 target-version = "py39"
 
 [tool.ruff.lint]
@@ -39,7 +40,7 @@ select = [
 ]
 
 [tool.black]
-line-length = 88
+line-length = 200
 target-version = ["py39"]
 include = '\.pyi?$'
 
